--- a/app/src/main/res/drawable/playlist_background_shape.xml
+++ b/app/src/main/res/drawable/playlist_background_shape.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/padding_8"/>
-    <solid android:color="@android:color/transparent"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="@dimen/padding_104"/>
+    <solid android:color="@color/white"/>
 </shape>
