--- a/app/src/main/res/layout/playlists_fragment.xml
+++ b/app/src/main/res/layout/playlists_fragment.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/playlistsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="@dimen/padding_16"
+
                 android:layout_marginTop="@dimen/padding_16"
                 android:visibility="visible"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
@@ -83,4 +83,15 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <TextView
+        android:id="@+id/playlistCreatedNotification"
+        style="@style/PlaylistNotificationStyle"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:gravity="center"
+        android:layout_marginHorizontal="@dimen/padding_8"
+        android:layout_marginBottom="@dimen/padding_16"
+        android:layout_gravity="bottom"
+        tools:text="Плейлист BeSt SoNg EvEr! создан"
+        android:visibility="gone"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
