--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -191,7 +191,6 @@
     <style name="LibraryNothingFoundTextPH">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">19sp</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
@@ -258,7 +257,7 @@
     </style>
 
     <style name="PlaylistNotificationStyle">
-        <item name="android:background">@color/yp_black</item>
+        <item name="android:background">@drawable/tracklist_notification_background</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">14sp</item>
