--- a/app/src/main/res/layout/playlistscreen_fragment.xml
+++ b/app/src/main/res/layout/playlistscreen_fragment.xml
@@ -125,6 +125,12 @@
                 android:layout_gravity="bottom"/>
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/shareIc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
