--- a/app/src/main/res/layout/playlist_details_fragment.xml
+++ b/app/src/main/res/layout/playlist_details_fragment.xml
@@ -55,8 +55,8 @@
         app:layout_constraintDimensionRatio="h,1:1"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toBottomOf="@id/buttonBackBarrier"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"
         app:srcCompat="@drawable/vector_empty_album_placeholder"
         android:visibility="visible"/>
 
@@ -145,6 +145,27 @@
             app:layout_constraintTop_toBottomOf="@id/playlistContents"
             app:layout_constraintStart_toEndOf="@id/shareIc"/>
 
+        <FrameLayout
+            style="@style/loadingOverlayStyle"
+            android:id="@+id/loadingScreen"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:visibility="visible" />
+        </FrameLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -210,5 +231,7 @@
             android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
