update methods dont work well

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -108,5 +108,12 @@
         android:id="@+id/editPlayListFragment"
         android:name="com.practicum.playlistmaker.medialibrary.ui.edit_playlist_fragment.EditPlayListFragment"
         android:label="edit_playlist_fragment"
-        tools:layout="@layout/edit_playlist_fragment" />
+        tools:layout="@layout/edit_playlist_fragment" >
+        <action
+            android:id="@+id/action_editPlayListFragment_to_playlistDetailsFragment"
+            app:destination="@id/playlistDetailsFragment" />
+        <action
+            android:id="@+id/action_editPlayListFragment_to_mediaLibraryFragment"
+            app:destination="@id/mediaLibraryFragment" />
+    </fragment>
 </navigation>
